--- a/ffmpeg2/install
+++ b/ffmpeg2/install
@@ -6,7 +6,7 @@ PROG_PATH_LIB="$PROG_PATH/lib"
 PROG_PATH_BIN="$PROG_PATH/bin"
 PROG_PATH_INCLUDE="$PROG_PATH/include"
 
-declare -i PROG_PATH_LEN=${#PROG_PATH_BIN}
+PROG_PATH_LEN=${#PROG_PATH_BIN}
 PROG_PATH_LEN=$(($PROG_PATH_LEN+2))
 MSG_PREFIX=" *"
 
