--- a/libcurl/install
+++ b/libcurl/install
@@ -6,7 +6,7 @@ PROG_PATH_LIB="$PROG_PATH/lib"
 PROG_PATH_BIN="$PROG_PATH/bin"
 PROG_PATH_INCLUDE="$PROG_PATH/include"
 
-declare -i PROG_PATH_LEN=${#PROG_PATH_LIB}
+PROG_PATH_LEN=${#PROG_PATH_LIB}
 PROG_PATH_LEN=$(($PROG_PATH_LEN+2))
 MSG_PREFIX=" *"
 
@@ -18,15 +18,15 @@ fi
 
 mkdir -p $PROG_PATH
 
-cp  -v -r -n ./lib $PROG_PATH_LIB
-cp  -v -r -n ./bin $PROG_PATH_BIN
-cp -v -r -n ./include $PROG_PATH_INCLUDE
-
+cp -v -r -n lib $PROG_PATH_LIB
+cp -v -r -n bin $PROG_PATH_BIN
+cp -v -r -n include $PROG_PATH_INCLUDE
 
 ls $PROG_PATH_LIB/lib*.so* | xargs -i -n1  echo "{}" | cut -c $PROG_PATH_LEN- | xargs -i -n1  echo "ln -f -s ${PROG_PATH_LIB}/{} /usr/lib/{}" | sh
 if [ -f "/usr/bin/curl" ] ; then
 	rm -rf /usr/bin/curl
-else 
-	ln -f -s $PROG_PATH/bin/curl /usr/bin/curl
-fi
+fi 
+
+ln -f -s $PROG_PATH/bin/curl /usr/bin/curl
+
 echo "$MSG_PREFIX install sucess $PROG"
