--- a/librtmp/install
+++ b/librtmp/install
@@ -3,7 +3,7 @@
 PROG=librtmp
 PROG_PATH="/data/app/$PROG"
 
-declare -i PROG_PATH_LEN=${#PROG_PATH}
+PROG_PATH_LEN=${#PROG_PATH}
 PROG_PATH_LEN=$(($PROG_PATH_LEN+2))
 MSG_PREFIX=" *"
 
@@ -15,7 +15,7 @@ fi
 
 mkdir -p $PROG_PATH
 
-cp  -v -r -n ./lib* $PROG_PATH
+cp -v -r -n lib* $PROG_PATH
 
 ls $PROG_PATH/lib*.so* | xargs -i -n1  echo "{}" | cut -c $PROG_PATH_LEN- | xargs -i -n1  echo "ln -f -s ${PROG_PATH}/{} /usr/lib/{}" | sh
 
